parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-f-string-literals-3.snap
---
source: src/lexer/lexer.rs
description: "a = rf\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: RawFStringStart,
        value: Str(
            "rf\"",
        ),
        start: 4,
        end: 7,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello",
        ),
        start: 7,
        end: 12,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 12,
        end: 13,
    },
]
