parser/src/lexer/snapshots/enderpy__lexer__lexer__tests__string-literals-2.snap
---
source: src/lexer/lexer.rs
description: "\"\""
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "\"\"",
        ),
        start: 0,
        end: 2,
    },
]
